Add meta to components

--- a/docs/_includes/meta.html
+++ b/docs/_includes/meta.html
@@ -1,5 +1,13 @@
 <div class="field is-grouped">
 
+  {% if include.new %}
+    <div class="control">
+      <div class="tags">
+        <span class="tag is-primary">New!</span>
+      </div>
+    </div>
+  {% endif %}
+
   {% if include.since %}
     <div class="control">
       <div class="tags has-addons">
