--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -139,28 +139,17 @@ variables:
 <section class="section">
   <div class="container">
 
-    <div class="columns" style="margin-bottom: -0.75rem !important;">
-      <div class="column">
-        <h1 class="title">Breadcrumb</h1>
-        <h2 class="subtitle">
-          A simple <strong>breadcrumb</strong> component to improve your navigation experience
-        </h2>
-        {%
-          include meta.html
-          since="0.4.3"
-          variables=true
-          colors=false
-          sizes=true
-        %}
-      </div>
-
-      <div class="column is-narrow">
-        <p class="tags has-addons">
-          <span class="tag is-success">New!</span>
-          <span class="tag is-info">0.4.3</span>
-        </p>
-      </div>
-    </div>
+    <h1 class="title">Breadcrumb</h1>
+    <h2 class="subtitle">
+      A simple <strong>breadcrumb</strong> component to improve your navigation experience
+    </h2>
+    {%
+      include meta.html
+      since="0.4.3"
+      variables=true
+      colors=false
+      sizes=true
+    %}
 
     <hr>
 
@@ -245,7 +234,7 @@ variables:
 
     <hr style="margin-bottom: 0;">
 
-    <h3 id="sizes" class="title">
+    <h3 id="sizes" class="title" style="padding-top: 1.5rem;">
       Sizes
     </h3>
 
