--- a/docs/documentation/components/level.html
+++ b/docs/documentation/components/level.html
@@ -10,6 +10,12 @@ doc-subtab: level
   <div class="container">
     <h1 class="title">Level</h1>
     <h2 class="subtitle">A multi-purpose <strong>horizontal level</strong>, which can contain almost any other element</h2>
+    {%
+      include meta.html
+      colors=false
+      sizes=false
+      variables=false
+    %}
 
     <hr>
 
