--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -33,6 +33,7 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
   border-color: $button-border
   color: $button
   cursor: pointer
+  display: table-cell
   justify-content: center
   padding-left: 0.75em
   padding-right: 0.75em
