--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -4,6 +4,8 @@
   flex-grow: 1
   flex-shrink: 1
   padding: 0.75rem
+  .columns.is-justified
+    justify-content: center
   .columns.is-mobile > &.is-narrow
     flex: none
   .columns.is-mobile > &.is-full
