--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -225,11 +225,7 @@ variables:
       </div>
     </div>
 
-    <hr style="margin-bottom: 0;">
-
-    <h3 id="colors" class="title" style="padding-top: 1.5rem;">
-      Colors
-    </h3>
+    {% include heading.html name="Colors" %}
 
     <div class="columns">
       <div class="column is-half">
@@ -240,11 +236,7 @@ variables:
       </div>
     </div>
 
-    <hr style="margin-bottom: 0;">
-
-    <h3 id="sizes" class="title" style="padding-top: 1.5rem;">
-      Sizes
-    </h3>
+    {% include heading.html name="Sizes" %}
 
     <div class="columns">
       <div class="column is-half">
