Optimize message docs

--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -210,9 +210,20 @@ variables:
       </div>
     </div>
 
+    {% include heading.html name="Colors" %}
+
+    <div class="columns">
+      <div class="column is-half">
+        {{message_colors_example}}
+      </div>
+      <div class="column is-half">
+        {% highlight html %}{{message_colors_example}}{% endhighlight %}
+      </div>
+    </div>
+
     <hr>
 
-    <h3 class="subtitle">Message body only</h3>
+    <h3 class="title">Message body only</h3>
     <div class="content">
       <p>You can <strong>omit</strong> the message header:</p>
     </div>
@@ -222,17 +233,6 @@ variables:
       </div>
       <div class="column is-half">
         {% highlight html %}{{message_body_example}}{% endhighlight %}
-      </div>
-    </div>
-
-    {% include heading.html name="Colors" %}
-
-    <div class="columns">
-      <div class="column is-half">
-        {{message_colors_example}}
-      </div>
-      <div class="column is-half">
-        {% highlight html %}{{message_colors_example}}{% endhighlight %}
       </div>
     </div>
 
