--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -34,6 +34,14 @@
     &:hover
       border-bottom-color: $primary
 
+.anchor-title
+  padding-top: 1.5rem
+  position: relative
+
+.anchor-link
+  position: absolute
+  right: calc(100% + 1rem)
+
 .article-image
   background-color: $primary
   display: block
