--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3477,6 +3477,42 @@ input[type="submit"].button {
   font-size: 1.25rem;
 }
 
+.tag.is-delete {
+  margin-left: 1px;
+  padding: 0;
+  position: relative;
+  width: 2em;
+}
+
+.tag.is-delete:before, .tag.is-delete:after {
+  background-color: currentColor;
+  content: "";
+  display: block;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform-origin: center center;
+}
+
+.tag.is-delete:before {
+  height: 1px;
+  width: 50%;
+}
+
+.tag.is-delete:after {
+  height: 50%;
+  width: 1px;
+}
+
+.tag.is-delete:hover, .tag.is-delete:focus {
+  background-color: #e8e8e8;
+}
+
+.tag.is-delete:active {
+  background-color: #dbdbdb;
+}
+
 .tag.is-rounded {
   border-radius: 290486px;
 }
@@ -8430,6 +8466,16 @@ html.route-index #carbon {
 
 .feature-title a:hover {
   border-bottom-color: #00d1b2;
+}
+
+.anchor-title {
+  padding-top: 1.5rem;
+  position: relative;
+}
+
+.anchor-link {
+  position: absolute;
+  right: calc(100% + 1rem);
 }
 
 .article-image {
