--- a/docs/_includes/heading.html
+++ b/docs/_includes/heading.html
@@ -1,5 +1,8 @@
 <hr style="margin-bottom: 0;">
 
-<h3 id="{{ include.name | downcase }}" class="title" style="padding-top: 1.5rem;">
+<h3 id="{{ include.name | slugify }}" class="title anchor-title">
   {{ include.name }}
+  <a class="anchor-link" href="#{{ include.name | slugify }}">
+    #
+  </a>
 </h3>
