Add colors page

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -63,7 +63,9 @@
           <hr class="navbar-divider">
           <div class="navbar-item">
             <div>
-              <p class="has-text-info is-size-6-desktop"><strong>{{ site.version }}</strong></p>
+              <p class="is-size-6-desktop">
+                <strong class="has-text-info">{{ site.version }}</strong>
+              </p>
               {{#unless site.deprecated}}
                 <small>
                   <a class="view-all-versions" href="/versions">View all versions</a>
