--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -65,7 +65,7 @@ route: documentation
 
 <section class="section">
   <div class="container">
-    <p class="has-text-centered has-text-grey-light">
+    <p class="has-text-grey-light">
       This page is <strong class="has-text-grey">open source</strong>.
       Noticed a typo?
       Or something unclear?
