--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -960,6 +960,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   border-radius: 0 !important;
 }
 
+.is-shadowless {
+  box-shadow: none !important;
+}
+
 .is-unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
