--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -151,5 +151,8 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 .is-radiusless
   border-radius: 0 !important
 
+.is-shadowless
+  box-shadow: none !important
+
 .is-unselectable
   +unselectable
