--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -37,10 +37,15 @@
 .anchor-title
   padding-top: 1.5rem
   position: relative
+  +mobile
+    padding-left: 2rem
 
 .anchor-link
   position: absolute
   right: calc(100% + 1rem)
+  +mobile
+    left: 0
+    right: auto
 
 .article-image
   background-color: $primary
