--- a/docs/_includes/subnav-components.html
+++ b/docs/_includes/subnav-components.html
@@ -1,5 +1,5 @@
 <nav class="navbar has-shadow">
-  <div class="container is-fullhd">
+  <div class="container">
     <div class="navbar-brand">
       {% if site.vernum >= 43 %}
         <a class="navbar-item is-tab {% if page.doc-subtab == 'breadcrumb' %}is-active{% endif %}" href="{{ site.url }}/documentation/components/breadcrumb/">
