Add JS instructions

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -142,6 +142,10 @@ a {
   text-decoration: none;
 }
 
+a strong {
+  color: currentColor;
+}
+
 a:hover {
   color: #363636;
 }
@@ -2579,6 +2583,11 @@ a.box:active {
 }
 
 .file {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   align-items: stretch;
   display: flex;
   justify-content: flex-start;
@@ -2605,12 +2614,12 @@ a.box:active {
   font-size: 28px;
 }
 
-.file.has-path .file-cta {
+.file.has-name .file-cta {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
 }
 
-.file.has-path .file-path {
+.file.has-name .file-name {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
@@ -2629,7 +2638,7 @@ a.box:active {
   padding: 1em 3em;
 }
 
-.file.is-centered .file-path {
+.file.is-centered .file-name {
   border-width: 0 1px 1px;
 }
 
@@ -2654,11 +2663,11 @@ a.box:active {
   font-size: 35px;
 }
 
-.file.is-centered.has-path .file-cta {
+.file.is-centered.has-name .file-cta {
   border-radius: 3px 3px 0 0;
 }
 
-.file.is-centered.has-path .file-path {
+.file.is-centered.has-name .file-name {
   border-radius: 0 0 3px 3px;
   border-width: 0 1px 1px;
 }
@@ -2673,21 +2682,21 @@ a.box:active {
 }
 
 .file-label:hover .file-cta {
-  background-color: #ff2b56;
+  background-color: #eeeeee;
   color: #363636;
 }
 
-.file-label:hover .file-path {
-  border-color: #ff2b56;
+.file-label:hover .file-name {
+  border-color: #eeeeee;
 }
 
 .file-label:active .file-cta {
-  background-color: #ff1f4b;
+  background-color: #e8e8e8;
   color: #363636;
 }
 
-.file-label:active .file-path {
-  border-color: #ff1f4b;
+.file-label:active .file-name {
+  border-color: #e8e8e8;
 }
 
 .file-input {
@@ -2700,7 +2709,7 @@ a.box:active {
 }
 
 .file-cta,
-.file-path {
+.file-name {
   -moz-appearance: none;
   -webkit-appearance: none;
   align-items: center;
@@ -2727,25 +2736,25 @@ a.box:active {
 }
 
 .file-cta:focus, .file-cta.is-focused, .file-cta:active, .file-cta.is-active,
-.file-path:focus,
-.file-path.is-focused,
-.file-path:active,
-.file-path.is-active {
+.file-name:focus,
+.file-name.is-focused,
+.file-name:active,
+.file-name.is-active {
   outline: none;
 }
 
 .file-cta[disabled],
-.file-path[disabled] {
+.file-name[disabled] {
   cursor: not-allowed;
 }
 
 .file-cta {
-  background-color: #ff3860;
+  background-color: whitesmoke;
   color: #4a4a4a;
 }
 
-.file-path {
-  border-color: #ff3860;
+.file-name {
+  border-color: whitesmoke;
   border-style: solid;
   border-width: 1px 1px 1px 0;
   display: block;
