--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -20,6 +20,19 @@ $input-icon-active-color: $grey !default
 
 $input-radius: $radius !default
 
+$file-border-color: transparent !default
+$file-radius: $radius !default
+
+$file-cta-background-color: $white-ter !default
+$file-cta-color: $grey-dark !default
+$file-cta-hover-color: $grey-darker !default
+$file-cta-active-color: $grey-darker !default
+
+$file-name-border-color: $file-cta-background-color !default
+$file-name-border-style: solid !default
+$file-name-border-width: 1px 1px 1px 0 !default
+$file-name-max-width: 16em !default
+
 $label-color: $grey-darker !default
 $label-weight: $weight-bold !default
 
@@ -181,21 +194,8 @@ $help-size: $size-small !default
     &.is-large:after
       font-size: $size-large
 
-$file-border-color: transparent !default
-$file-radius: $radius !default
-
-// $file-cta-background-color: $white-ter !default
-$file-cta-background-color: $red !default
-$file-cta-color: $grey-dark !default
-$file-cta-hover-color: $grey-darker !default
-$file-cta-active-color: $grey-darker !default
-
-$file-path-border-color: $file-cta-background-color !default
-$file-path-border-style: solid !default
-$file-path-border-width: 1px 1px 1px 0 !default
-$file-path-max-width: 16em !default
-
 .file
+  +unselectable
   align-items: stretch
   display: flex
   justify-content: flex-start
@@ -212,11 +212,11 @@ $file-path-max-width: 16em !default
     .file-icon
       .fa
         font-size: 28px
-  &.has-path
+  &.has-name
     .file-cta
       border-bottom-right-radius: 0
       border-top-right-radius: 0
-    .file-path
+    .file-name
       border-bottom-left-radius: 0
       border-top-left-radius: 0
   &.is-centered
@@ -227,7 +227,7 @@ $file-path-max-width: 16em !default
       flex-direction: column
       height: auto
       padding: 1em 3em
-    .file-path
+    .file-name
       border-width: 0 1px 1px
     .file-icon
       height: 1.5em
@@ -243,10 +243,10 @@ $file-path-max-width: 16em !default
     &.is-large
       .file-icon .fa
         font-size: 35px
-    &.has-path
+    &.has-name
       .file-cta
         border-radius: $file-radius $file-radius 0 0
-      .file-path
+      .file-name
         border-radius: 0 0 $file-radius $file-radius
         border-width: 0 1px 1px
 
@@ -261,14 +261,14 @@ $file-path-max-width: 16em !default
     .file-cta
       background-color: darken($file-cta-background-color, 2.5%)
       color: $file-cta-hover-color
-    .file-path
-      border-color: darken($file-path-border-color, 2.5%)
+    .file-name
+      border-color: darken($file-name-border-color, 2.5%)
   &:active
     .file-cta
       background-color: darken($file-cta-background-color, 5%)
       color: $file-cta-active-color
-    .file-path
-      border-color: darken($file-path-border-color, 5%)
+    .file-name
+      border-color: darken($file-name-border-color, 5%)
 
 .file-input
   height: 0.01em
@@ -279,7 +279,7 @@ $file-path-max-width: 16em !default
   width: 0.01em
 
 .file-cta,
-.file-path
+.file-name
   +control
   border-color: $file-border-color
   border-radius: $file-radius
@@ -292,12 +292,12 @@ $file-path-max-width: 16em !default
   background-color: $file-cta-background-color
   color: $file-cta-color
 
-.file-path
-  border-color: $file-path-border-color
-  border-style: $file-path-border-style
-  border-width: $file-path-border-width
+.file-name
+  border-color: $file-name-border-color
+  border-style: $file-name-border-style
+  border-width: $file-name-border-width
   display: block
-  max-width: $file-path-max-width
+  max-width: $file-name-max-width
   overflow: hidden
   text-align: left
   text-overflow: ellipsis
