--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -200,6 +200,34 @@ $help-size: $size-small !default
   display: flex
   justify-content: flex-start
   position: relative
+  // Colors
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-#{$name}
+      .file-cta
+        background-color: $color
+        border-color: transparent
+        color: $color-invert
+      &:hover,
+      &.is-hovered
+        .file-cta
+          background-color: darken($color, 2.5%)
+          border-color: transparent
+          color: $color-invert
+      &:focus,
+      &.is-focused
+        .file-cta
+          border-color: transparent
+          box-shadow: 0 0 0.5em rgba($color, 0.25)
+          color: $color-invert
+      &:active,
+      &.is-active
+        .file-cta
+          background-color: darken($color, 5%)
+          border-color: transparent
+          color: $color-invert
+  // Sizes
   &.is-small
     font-size: $size-small
   &.is-medium
@@ -212,6 +240,7 @@ $help-size: $size-small !default
     .file-icon
       .fa
         font-size: 28px
+  // Modifiers
   &.has-name
     .file-cta
       border-bottom-right-radius: 0
