Add is-right and is-fullwidth for file

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2888,6 +2888,25 @@ a.box:active {
   border-width: 0 1px 1px;
 }
 
+.file.is-right .file-cta {
+  border-radius: 0 3px 3px 0;
+}
+
+.file.is-right .file-name {
+  border-radius: 3px 0 0 3px;
+  border-width: 1px 0 1px 1px;
+  order: -1;
+}
+
+.file.is-fullwidth .file-label {
+  width: 100%;
+}
+
+.file.is-fullwidth .file-name {
+  flex-grow: 1;
+  max-width: none;
+}
+
 .file-label {
   align-items: stretch;
   display: flex;
@@ -2898,21 +2917,21 @@ a.box:active {
 }
 
 .file-label:hover .file-cta {
-  background-color: #eeeeee;
+  background-color: #ff2b56;
   color: #363636;
 }
 
 .file-label:hover .file-name {
-  border-color: #eeeeee;
+  border-color: #ff2b56;
 }
 
 .file-label:active .file-cta {
-  background-color: #e8e8e8;
+  background-color: #ff1f4b;
   color: #363636;
 }
 
 .file-label:active .file-name {
-  border-color: #e8e8e8;
+  border-color: #ff1f4b;
 }
 
 .file-input {
@@ -2965,12 +2984,12 @@ a.box:active {
 }
 
 .file-cta {
-  background-color: whitesmoke;
+  background-color: #ff3860;
   color: #4a4a4a;
 }
 
 .file-name {
-  border-color: whitesmoke;
+  border-color: #ff3860;
   border-style: solid;
   border-width: 1px 1px 1px 0;
   display: block;
