--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -23,7 +23,7 @@ $input-radius: $radius !default
 $file-border-color: transparent !default
 $file-radius: $radius !default
 
-$file-cta-background-color: $white-ter !default
+$file-cta-background-color: $red !default
 $file-cta-color: $grey-dark !default
 $file-cta-hover-color: $grey-darker !default
 $file-cta-active-color: $grey-darker !default
@@ -278,6 +278,19 @@ $help-size: $size-small !default
       .file-name
         border-radius: 0 0 $file-radius $file-radius
         border-width: 0 1px 1px
+  &.is-right
+    .file-cta
+      border-radius: 0 $file-radius $file-radius 0
+    .file-name
+      border-radius: $file-radius 0 0 $file-radius
+      border-width: 1px 0 1px 1px
+      order: -1
+  &.is-fullwidth
+    .file-label
+      width: 100%
+    .file-name
+      flex-grow: 1
+      max-width: none
 
 .file-label
   align-items: stretch
