Fix background color

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -23,7 +23,7 @@ $input-radius: $radius !default
 $file-border-color: transparent !default
 $file-radius: $radius !default
 
-$file-cta-background-color: $red !default
+$file-cta-background-color: $white-ter !default
 $file-cta-color: $grey-dark !default
 $file-cta-hover-color: $grey-darker !default
 $file-cta-active-color: $grey-darker !default
