Add bootstrap comparison page

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -47,6 +47,9 @@
       <div class="column is-3">
         <div id="about" class="content">
           <strong xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Bulma</strong> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jgthms.com" property="cc:attributionName" rel="cc:attributionURL">Jeremy Thomas</a>.
+          <p id="alternative">
+            <a href="{{ site.url }}/alternative-to-bootstrap/">An alternative to <strong>Bootstrap</strong></a>
+          </p>
           {% unless site.env == "development" %}
           <div class="twitter-container">
             <a href="{{ site.twitter }}" class="twitter-follow-button" data-show-count="true" data-lang="en" data-size="large">@jgthms</a>
