--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -64,3 +64,10 @@
 #tsp
   small
     display: block
+
+#alternative
+  font-size: 0.875rem
+  a
+    color: $text-light
+    &:hover
+      text-decoration: underline
