--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -18,6 +18,7 @@ $twitter: #55acee
 @import "./_sass/twitter"
 @import "./_sass/expo"
 @import "./_sass/love"
+@import "./_sass/bootstrap"
 
 \:root
   --primary: #{$primary}
