--- a/docs/_includes/getting-started.html
+++ b/docs/_includes/getting-started.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="{{ site.fontawesome }}">
