--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -74,7 +74,6 @@
     height: 180px
     width: 240px
 
-
 .article-overlay
   +overlay
   background-color: $black
@@ -104,3 +103,7 @@
   font-size: 2.5rem
   font-weight: $weight-bold
   line-height: 1.25
+
+.emoji
+  margin-right: 0.5em
+  margin-top: 2px
