--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -1,5 +1,8 @@
 @charset "utf-8"
 
+$github: #333333
+$twitter: #55acee
+
 @import "../bulma"
 @import "./_sass/highlight"
 @import "./_sass/override"
@@ -12,6 +15,8 @@
 @import "./_sass/callout"
 @import "./_sass/bsa"
 @import "./_sass/route"
+@import "./_sass/twitter"
+@import "./_sass/love"
 
 \:root
   --primary: #{$primary}
