--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -144,6 +144,10 @@
           </a>
         </div>
       </div>
+      <a class="navbar-item {% if page.route == 'expo' %}is-active{% endif %}" href="{{ site.url }}/expo/">
+        <span class="emoji">🎨</span>
+        Expo
+      </a>
       <a class="navbar-item {% if page.route == 'love' %}is-active{% endif %}" href="{{ site.url }}/love/">
         <span class="emoji">❤️</span>
         Love
@@ -151,10 +155,10 @@
     </div>
 
     <div class="navbar-end">
-      <a class="navbar-item" href="{{ site.github }}" target="_blank">
+      <a class="navbar-item is-hidden-desktop-only" href="{{ site.github }}" target="_blank">
         Github
       </a>
-      <a class="navbar-item" href="{{ site.twitter }}" target="_blank">
+      <a class="navbar-item is-hidden-desktop-only" href="{{ site.twitter }}" target="_blank">
         Twitter
       </a>
       <div class="navbar-item">
