--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -1,7 +1,7 @@
 .testimonials
   background-color: $background
 
-.love
+.testimonial
   align-items: flex-start
   display: flex
   justify-content: center
@@ -25,13 +25,13 @@
 +mobile
   .testimonials
     padding: 1.5rem
-  .love
+  .testimonial
     margin-bottom: 1.5rem
 
 +tablet
   .testimonials
     padding: 3rem
-  .love + .love
+  .testimonial + .testimonial
     margin-top: 1.5rem
 
 .rainbow
@@ -57,24 +57,35 @@
   display: flex
   justify-content: center
 
-.more-love-container
-  align-items: center
+.embrace
   background-color: $background
   border-radius: $radius
-  display: flex
-  justify-content: center
   padding: 1.5rem
-  .tw-button
-    margin-left: 1.5rem
+  &:not(:first-child)
+    margin-top: 1.5rem
+  &:not(:last-child)
+    margin-bottom: 1.5rem
 
 +mobile
-  .hug,
-  .more-love
+  .love
+    padding: 1.5rem
+  .hug
     margin: 1.5rem
+  .embrace
+    text-align: center
+  .embrace-button
+    margin-top: 0.75rem
 
 +tablet
-  .more-love
-    margin: 3rem 0 1.5rem
+  .love
+    padding-bottom: 3rem
+    padding-top: 3rem
+  .embrace
+    align-items: center
+    display: flex
+    justify-content: center
+  .embrace-button
+    margin-left: 1.5rem
   .hugs
     display: flex
     flex-wrap: wrap
