--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -16,6 +16,7 @@ $twitter: #55acee
 @import "./_sass/bsa"
 @import "./_sass/route"
 @import "./_sass/twitter"
+@import "./_sass/expo"
 @import "./_sass/love"
 
 \:root
