--- a/docs/_sass/expo.sass
+++ b/docs/_sass/expo.sass
@@ -33,15 +33,13 @@
   .expo
     padding-bottom: 3rem
     padding-top: 3rem
-  .website:not(:last-child)
-    margin-bottom: 3rem
+  .website
+    margin-top: 3rem
+    &:nth-child(1),
+    &:nth-child(2)
+      margin-top: 0
   .website-image
     margin-bottom: 3rem
-
-+desktop
-  .expo
-    padding-bottom: 6rem
-    padding-top: 6rem
 
 +widescreen
   .websites
